--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,10 @@ readme = "README.md"
 requires-python = ">=3.9"
 license = {text = "MIT"}
 authors = [
-    {name = "Sorin", email = "your-email@example.com"}
+    {name = "Sorin Marti", email = "sorin.marti@gmail.com"}
 ]
 maintainers = [
-    {name = "Sorin", email = "your-email@example.com"}
+    {name = "Sorin Marti", email = "sorin.marti@gmail.com"}
 ]
 keywords = [
     "llm",
@@ -73,10 +73,10 @@ test = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/yourusername/generic-llm-api-client"
-Documentation = "https://github.com/yourusername/generic-llm-api-client#readme"
-Repository = "https://github.com/yourusername/generic-llm-api-client"
-Issues = "https://github.com/yourusername/generic-llm-api-client/issues"
+Homepage = "https://github.com/RISE-UNIBAS/generic_llm_api_client"
+Documentation = "https://github.com/RISE-UNIBAS/generic_llm_api_client#readme"
+Repository = "https://github.com/RISE-UNIBAS/generic_llm_api_client"
+Issues = "https://github.com/RISE-UNIBAS/generic_llm_api_client/issues"
 
 [tool.setuptools]
 packages = ["ai_client"]
