Fixed scicore integration test

--- a/pytest.ini
+++ b/pytest.ini
@@ -33,3 +33,5 @@ filterwarnings =
     error
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
+    ignore::ResourceWarning
+    ignore::pytest.PytestUnraisableExceptionWarning
