--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -84,3 +84,4 @@ jobs:
         gh release upload
         '${{ github.ref_name }}' dist/**
         --repo '${{ github.repository }}'
+        --clobber
