--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "generic-llm-api-client"
-version = "0.1.2"
+version = "0.2.0"
 description = "A unified, provider-agnostic Python client for multiple LLM APIs"
 readme = "README.md"
 requires-python = ">=3.9"
@@ -82,7 +82,7 @@ Issues = "https://github.com/RISE-UNIBAS/generic_llm_api_client/issues"
 packages = ["ai_client"]
 
 [tool.setuptools.package-data]
-ai_client = ["py.typed"]
+ai_client = ["py.typed", "pricing.json"]
 
 [tool.black]
 line-length = 100
