--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,9 @@ GOOGLE_API_KEY=your_google_key_here
 # Mistral
 MISTRAL_API_KEY=your_mistral_key_here
 
+# Cohere
+COHERE_API_KEY=your_cohere_key_here
+
 # DeepSeek
 DEEPSEEK_API_KEY=your_deepseek_key_here
 
