--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,12 +45,13 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
 dependencies = [
-    "anthropic~=0.71.0",
-    "openai~=2.6.1",
-    "mistralai~=1.9.11",
-    "google-genai~=1.46.0",
-    "cohere~=5.20.0",
+    "anthropic~=0.79.0",
+    "openai~=2.21.0",
+    "mistralai~=1.12.2",
+    "google-genai~=1.63.0",
+    "cohere~=5.20.5",
     "requests~=2.32.5",
+    "geonamescache>=1.6.0",
 ]
 
 [project.optional-dependencies]
@@ -84,7 +85,7 @@ Issues = "https://github.com/RISE-UNIBAS/generic_llm_api_client/issues"
 packages = ["ai_client"]
 
 [tool.setuptools.package-data]
-ai_client = ["py.typed", "pricing.json"]
+ai_client = ["py.typed", "pricing.json", "tools/default_tools.json"]
 
 [tool.black]
 line-length = 100
