--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-anthropic~=0.73.0
-openai~=2.8.0
-mistralai~=1.9.11
-google-genai~=1.50.1
-cohere~=5.20.0
+anthropic~=0.79.0
+openai~=2.21.0
+mistralai~=1.12.2
+google-genai~=1.63.0
+cohere~=5.20.5
 requests~=2.32.5
+geonamescache~=1.6.0
